@@ -187,3 +187,32 @@ div.footer {
 #conninfo {
 	font-size:14px;
 }
+
+.black_overlay{
+	display: none;
+	position: absolute;
+	top: 0%;
+	left: 0%;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	z-index:1001;
+	-moz-opacity: 0.8;
+	opacity:.80;
+	filter: alpha(opacity=80);
+}
+
+.white_content {
+	display: none;
+	position: absolute;
+	top: 10%;
+	left: 15%;
+	width: 70%;
+	height: 80%;
+	padding-left: 8px;
+	padding-right: 8px;
+	border: 5px solid #d0d0d0;
+	background-color: white;
+	z-index:1002;
+	overflow: auto;
+}
