@@ -1,36 +1,5 @@
 <script type="text/javascript" src="webui/jquery.min.js"></script>
 <script type="text/javascript" src="webui/jquery.flot.min.js"></script>
-
-<style>
-.black_overlay{
-	display: none;
-	position: absolute;
-	top: 0%;
-	left: 0%;
-	width: 100%;
-	height: 100%;
-	background-color: black;
-	z-index:1001;
-	-moz-opacity: 0.8;
-	opacity:.80;
-	filter: alpha(opacity=80);
-}
-
-.white_content {
-	display: none;
-	position: absolute;
-	top: 10%;
-	left: 15%;
-	width: 70%;
-	height: 80%;
-	padding-left: 8px;
-	padding-right: 8px;
-	border: 5px solid #d0d0d0;
-	background-color: white;
-	z-index:1002;
-	overflow: auto;
-}
-</style>
 <div id="light" class="white_content">
 <table width="100%"><tr>
 <td><h3><b class="mono" id="disp_txid"></b></h3>
@@ -343,18 +312,6 @@ function decode_tx_id(txid) {
 	aj.open("GET","txs2s.xml?id="+txid+'&sid='+sid, true);
 	aj.send(null);
 }
-
-function noscroll() {
-	scroll(0,0)
-}
-
-function closepopup() {
-	light.style.display='none'
-	fade.style.display='none'
-	window.scrollTo(0,prvpos)
-	document.removeEventListener("scroll", noscroll)
-}
-
 
 function show_txs2s(extrapar) {
 	var aj = ajax()
